# perdix

./: .bacon-locations  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  REFACTORING_README.md  build.rs  build_cuda.bat  build_static.rs.bak  gpu_lisp_parallel.cu  terminal-complete.txt  test_async.bat  test_runtime.bat  test_size.rs  workspace.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: gpu_vs_cpu.rs  latency.rs  throughput.rs
cuda/: kernel.cu  kernel_fixed.cu  perdix_kernel.cu  perdix_kernel.cu.backup
dead/: zero_copy.rs
docs/design/: integration-bridge.md  system-overview.md
docs/design/orchestration/: overview.md
docs/design/terminal/: terminal-renderer.md
examples/: async_gpu_pty.rs  async_gpu_test.rs  basic_usage.rs  gpu_streaming.rs  jit_runtime.rs  pty_integration.rs  runtime_compile.rs  simple_test.rs  test_params.rs  test_ptx.rs  test_unified.rs
future/: agent.rs  main.rs  webgpu.rs
src/: benchmark.rs  cpu.rs  cpu.rs.bak  flush.rs  gpu.rs  lib.rs  main.rs  numa.rs  test_sync.rs  webgpu.rs
src/buffer/: device.rs  ffi.rs  gpu_arena.rs  header.rs  mod.rs  pinned.rs  slot.rs  spsc.rs
src/pty/: flush.rs  mod.rs  portable.rs  writer.rs
src/runtime/: cuda_params.rs  jit.rs  kernel_source.rs  mod.rs  runtime_compiler.rs
terminal/: Cargo.toml  build.rs
terminal/cuda/: matrix.cu  persistent.cu  text_kernel.cu
terminal/fx/: const_render.rs  cuda_ffi.rs  effects.rs  gpu_renderer.rs  mod.rs
terminal/src/: ansi.rs  buffer.rs  lib.rs
tests/: buffer_reuse.rs
transport/: Cargo.toml  README.md  build.rs
transport/benches/: performance.rs
transport/cuda/: common.cuh  init_kernel.cu  packed_kernel.cu  perdix_kernel.cu  test_kernel.cu  transport_kernel.cu
transport/examples/: basic_usage.rs
transport/src/: gpu.rs  lib.rs
transport/src/buffer/: device.rs  ffi.rs  gpu_arena.rs  header.rs  mod.rs  spsc.rs
transport/src/pty/: portable.rs
transport/src/runtime/: cuda_params.rs  kernel_source.rs  mod.rs  runtime_compiler.rs
