[workspace]
# Empty workspace to exclude from parent workspace

[package]
name = "perdix"
version = "0.1.0"
edition = "2021"
default-run = "perdix"

[lib]
name = "perdix"
path = "src/lib.rs"

[[bin]]
name = "perdix"
path = "src/main.rs"

[dependencies]
# CUDA driver API bindings
cust = { version = "0.3.2", optional = true }             
portable-pty = "0.9.0"
# WebGPU for universal GPU support
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.4", optional = true }  # For async runtime
# safe packed structs for slots
zerocopy = "0.8.27"    
# cast [u8] ↔ struct
bytemuck = "1.15"   
# raw FFI types
libc = "0.2"        

[build-dependencies]
# build .cu with nvcc
cc = "1"  

[features]
default = ["webgpu"]  # Default to universal GPU support
cuda = ["cust"]       # NVIDIA GPU path
webgpu = ["wgpu", "pollster"]  # Universal GPU path
